--- a/css/uexchange.css
+++ b/css/uexchange.css
@@ -66,6 +66,10 @@ body{
     background-color: rgba(211, 211, 211, 0.8)
 }
 
+#search-info{
+    background-color: rgba(211, 211, 211, 0.8)
+}
+
 tr > td{
     padding-bottom: 2em;
     padding-right: 2em;
