--- a/css/uexchange.css
+++ b/css/uexchange.css
@@ -1,7 +1,7 @@
 body{
     background-image: url("http://finance.nd.edu/assets/88232/original/finance.jpg");
 
-    padding:50px;
+/*    padding:50px;*/
 }
 
 #login-dp, #signup-dp{
